<resources>
    <string name="app_name">Sensors</string>
    <string name="accelerometer">accelerometer</string>
    <string name="accelerometer_text">X: %1$f, Y: %2$f, Z: %3$f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compass">compass</string>
    <string name="compass_image_content_desc">Compass image</string>
    <string name="not_available">NA</string>
    <string name="stop_notifications">Stop Notifications</string>
    <string name="light_sensor">light sensor</string>
    <string name="magnetometer">magnetometer</string>
    <string name="proximity_sensor">proximity sensor</string>
    <string name="proximity">proximity</string>
    <string name="_0">0</string>
    <string name="z_acceleration_m_s_2">Z Acceleration (m/s^2):</string>
    <string name="y_acceleration_m_s_2">Y Acceleration (m/s^2):</string>
    <string name="x_acceleration_m_s_2">X Acceleration (m/s^2):</string>
    <string name="cube">cube</string>
    <string name="x_geomagnetic_field_956_t">X Geomagnetic Field (μT):</string>
    <string name="z_geomagnetic_field_t">Z Geomagnetic Field (μT):</string>
    <string name="y_geomagnetic_field_t">Y Geomagnetic Field (μT):</string>
    <string name="ambient_light_lx">Ambient Light (lx):</string>
    <string name="orientation">orientation</string>
    <string name="steps">steps</string>
    <string name="azimuth_angle_around_the_z_axis">Azimuth (angle around the z-axis in &#176;)</string>
    <string name="pitch_angle_around_the_x_axis">Pitch (angle around the x-axis in &#176;)</string>
    <string name="roll_angle_around_the_y_axis">Roll (angle around the y-axis in &#176;)</string>
    <string name="sensors_app">sensors app</string>
    <string name="show_sensor_list">show device\'s sensor list</string>
    <string name="sensor_icon">sensor icon</string>
</resources>