<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccelerometerFragment">


    <TextView
        android:id="@+id/xAccelerationLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/x_acceleration_m_s_2"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/yAccelerationLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/y_acceleration_m_s_2"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/xAccelerationValueText"
        app:layout_constraintStart_toStartOf="@+id/xAccelerationValueText"
        app:layout_constraintTop_toBottomOf="@+id/xAccelerationValueText" />

    <TextView
        android:id="@+id/zAccelerationLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/z_acceleration_m_s_2"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/yAccelerationValueText"
        app:layout_constraintStart_toStartOf="@+id/yAccelerationValueText"
        app:layout_constraintTop_toBottomOf="@+id/yAccelerationValueText" />

    <TextView
        android:id="@+id/xAccelerationValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/_0"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/xAccelerationLabelText"
        app:layout_constraintStart_toStartOf="@+id/xAccelerationLabelText"
        app:layout_constraintTop_toBottomOf="@+id/xAccelerationLabelText"
        tools:text="0" />

    <TextView
        android:id="@+id/yAccelerationValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/yAccelerationLabelText"
        app:layout_constraintStart_toStartOf="@+id/yAccelerationLabelText"
        app:layout_constraintTop_toBottomOf="@+id/yAccelerationLabelText"
        tools:text="0" />

    <TextView
        android:id="@+id/zAccelerationValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/_0"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/zAccelerationLabelText"
        app:layout_constraintStart_toStartOf="@+id/zAccelerationLabelText"
        app:layout_constraintTop_toBottomOf="@+id/zAccelerationLabelText"
        tools:text="0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cube"
        android:src="@drawable/model_3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>