<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".proximitysensor.ProximitySensorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".proximitysensor.ProximitySensorFragment">

        <TextView
            android:id="@+id/proximity_sensor_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/proximity"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/proximity_main_image_view"
            app:layout_constraintStart_toStartOf="@+id/proximity_main_image_view"
            app:layout_constraintTop_toBottomOf="@+id/proximity_main_image_view" />

        <TextView
            android:id="@+id/proximity_sensor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textColor="@color/textColor"
            android:textSize="42sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/proximity_sensor_label_text"
            app:layout_constraintStart_toStartOf="@+id/proximity_sensor_label_text"
            app:layout_constraintTop_toBottomOf="@+id/proximity_sensor_label_text"
            tools:text="0" />

        <ImageView
            android:id="@+id/proximity_main_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/cube"
            android:src="@drawable/radar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>