<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MagnetometerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MagnetometerFragment">

        <TextView
            android:id="@+id/xMagnetometerLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/x_geomagnetic_field_956_t"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/yMagnetometerLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/y_geomagnetic_field_t"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/xMagnetometerValueText"
            app:layout_constraintStart_toStartOf="@+id/xMagnetometerValueText"
            app:layout_constraintTop_toBottomOf="@+id/xMagnetometerValueText" />

        <TextView
            android:id="@+id/zMagnetometerLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/z_geomagnetic_field_t"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/yMagnetometerValueText"
            app:layout_constraintStart_toStartOf="@+id/yMagnetometerValueText"
            app:layout_constraintTop_toBottomOf="@+id/yMagnetometerValueText" />

        <TextView
            android:id="@+id/xMagnetometerValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/xMagnetometerLabelText"
            app:layout_constraintStart_toStartOf="@+id/xMagnetometerLabelText"
            app:layout_constraintTop_toBottomOf="@+id/xMagnetometerLabelText"
            tools:text="0" />

        <TextView
            android:id="@+id/yMagnetometerValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_0"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/yMagnetometerLabelText"
            app:layout_constraintStart_toStartOf="@+id/yMagnetometerLabelText"
            app:layout_constraintTop_toBottomOf="@+id/yMagnetometerLabelText"
            tools:text="0" />

        <TextView
            android:id="@+id/zMagnetometerValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/zMagnetometerLabelText"
            app:layout_constraintStart_toStartOf="@+id/zMagnetometerLabelText"
            app:layout_constraintTop_toBottomOf="@+id/zMagnetometerLabelText"
            tools:text="0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/cube"
            android:src="@drawable/magnet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>